# gtk-mirror

./: .gitignore  .gitmodules  cspell.config.yaml  make-release.sh  pyproject.toml  setup.sh  taskfile.yaml  vcpkg.json
.github/config/: gtk.dict
.gitlab-ci/: README.md  test-msvc.bat  test-msys2.sh
subprojects/: gvdb.wrap  libffi.wrap  pcre2.wrap  pixman.wrap  proxy-libintl.wrap
