[project]
name = "gtk"
version = "4.16.2"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = [
    "meson~=1.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "markupsafe>=2.1.5",
    "packaging>=24.1",
    "pygments>=2.18.0",
    "typogrify>=2.0.7",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gtk"]
